--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "omnipy-examples"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
-authors = ["Sveinung Gundersen <sveinugu@gmail.com>, Jeanne Cheneby <>"]
+authors = ["Sveinung Gundersen <sveinugu@gmail.com>, Jeanne Cheneby <jeanne.cheneby@mn.uio.no>"]
 readme = "README.md"
 packages = [{include = "omnipy_examples", from = "src"}]
 
