--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,16 +12,18 @@ include = [
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
 typing-inspect = "^0.8.0"
-omnipy = "^0.9.0"
+omnipy = "^0.9.1"
 typer = {extras = ["all"], version = "^0.7.0"}
 omnipy-example-data = "^0.1.0"
+reader = "^3.4"
+github3-py = "^3.2.0"
 
 [tool.poetry.group.dev.dependencies]
 yapf = "^0.32.0"
 flake8 = "^6.0.0"
 isort = "^5.10.1"
 flake8-quotes = "^3.3.1"
-mypy = "^0.991"
+mypy = "^1.0.0"
 
 [tool.poetry.scripts]
 omnipy-examples = "omnipy_examples.main:app"
