--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ typer = "^0.9.0"
 omnipy-example-data = "^0.1.0"
 reader = "^3.4"
 github3-py = "^3.2.0"
-s3fs = "^2023.1.0"
+boto3 = "1.28.75"
 
 [tool.poetry.group.dev.dependencies]
 yapf = "^0.32.0"
