--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,8 @@ include = [
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
 typing-inspect = "^0.8.0"
-omnipy = "^0.11.0"
-typer = {extras = ["all"], version = "^0.7.0"}
+omnipy = "^0.12.1"
+typer = "^0.9.0"
 omnipy-example-data = "^0.1.0"
 reader = "^3.4"
 github3-py = "^3.2.0"
@@ -24,7 +24,7 @@ yapf = "^0.32.0"
 flake8 = "^6.0.0"
 isort = "^5.10.1"
 flake8-quotes = "^3.3.1"
-mypy = "^1.0.0"
+mypy = "^1.7.1"
 
 [tool.poetry.scripts]
 omnipy-examples = "omnipy_examples.main:app"
