--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,4 +26,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: fairtracks/omnipy-examples:${{  github.ref_name }} fairtracks/omnipy-examples:latest
+          tags:
+          - fairtracks/omnipy-examples:${{  github.ref_name }}
+          - fairtracks/omnipy-examples:latest
