--- a/prefect.yaml
+++ b/prefect.yaml
@@ -56,6 +56,7 @@ deployments:
   schedule:
 
 - name: isajson
+  version:
   tags: []
   description:
   entrypoint: src/omnipy_examples/deployment.py:isajson_prefect
