Update workflow names

--- a/.github/workflows/format_and_lint.yml
+++ b/.github/workflows/format_and_lint.yml
@@ -1,9 +1,9 @@
-name: Python package
+name: Format and lint
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  format_and_lint:
 
     runs-on: ubuntu-latest
     strategy:
