--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ include = [
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
 typing-inspect = "^0.8.0"
-omnipy = "0.15.3"
+omnipy = "0.15.5"
 typer = "^0.9.0"
 omnipy-example-data = "^0.1.0"
 reader = "^3.4"
@@ -21,11 +21,9 @@ pandas = "1.5.3"
 pytest = "<8"
 
 [tool.poetry.group.dev.dependencies]
-yapf = "^0.32.0"
-flake8 = "^6.0.0"
-isort = "^5.10.1"
-flake8-quotes = "^3.3.1"
 mypy = "^1.7.1"
+pre-commit = "^3.6.0"
+pydantic = {version = "<2", extras = ["email"]}
 
 [tool.poetry.scripts]
 omnipy-examples = "omnipy_examples.main:app"
