--- a/prefect.yaml
+++ b/prefect.yaml
@@ -7,89 +7,107 @@ name: omnipy_examples
 prefect-version: 2.13.8
 
 # build section allows you to manage and build docker images
-build: null
+build:
 
 # push section allows you to manage if and how this project is uploaded to remote locations
-push: null
+push:
 
 # pull section allows you to provide instructions for cloning this project in remote locations
 pull:
 - prefect.deployments.steps.set_working_directory:
     directory: /opt/prefect
-#- prefect.deployments.steps.git_clone:
-#    repository: https://github.com/elixir-oslo/omnipy_examples.git
-#    branch: master
+
+- prefect.deployments.steps.git_clone_project:
+    id: clone-step
+    repository: https://github.com/fairtracks/omnipy_examples.git
+    branch: gff_update_tmp
+
+- prefect.projects.steps.pip_install_requirements:
+    directory: "{{ clone-step.directory }}"
+    requirements_file: requirements.txt
+    stream_output: true
 
 # the deployments section allows you to provide configuration for deploying flows
 deployments:
 - name: dagsim
-  version: null
+  version:
   tags: []
-  description: null
+  description:
   entrypoint: src/omnipy_examples/deployment.py:dagsim_prefect
   parameters: {}
   work_pool:
     name: omnipy
-    work_queue_name: null
+    work_queue_name:
     job_variables: {}
-  schedule: null
+  schedule:
 
 - name: encode
-  version: null
+  version:
   tags: []
-  description: null
+  description:
   entrypoint: src/omnipy_examples/deployment.py:encode_prefect
   parameters: {}
   work_pool:
     name: omnipy
-    work_queue_name: null
+    work_queue_name:
     job_variables: {}
-  schedule: null
+  schedule:
 
 - name: gff
-  version: null
+  version:
   tags: []
-  description: null
+  description:
   entrypoint: src/omnipy_examples/deployment.py:gff_prefect
   parameters: {}
   work_pool:
     name: omnipy
-    work_queue_name: null
+    work_queue_name:
     job_variables: {}
-  schedule: null
+  schedule:
 
 - name: isajson
-  version: null
+  version:
   tags: []
-  description: null
+  description:
   entrypoint: src/omnipy_examples/deployment.py:isajson_prefect
   parameters: {}
   work_pool:
     name: omnipy
-    work_queue_name: null
+    work_queue_name:
     job_variables: {}
-  schedule: null
+  schedule:
 
 - name: uniprot
-  version: null
+  version:
   tags: []
-  description: null
+  description:
   entrypoint: src/omnipy_examples/deployment.py:uniprot_prefect
   parameters: {}
   work_pool:
     name: omnipy
-    work_queue_name: null
+    work_queue_name:
     job_variables: {}
-  schedule: null
+  schedule:
 
 - name: chatgpt
-  version: null
+  version:
   tags: []
-  description: null
+  description:
   entrypoint: src/omnipy_examples/deployment.py:chatgpt_prefect
   parameters: {}
   work_pool:
     name: omnipy
-    work_queue_name: null
+    work_queue_name:
     job_variables: {}
-  schedule: null
+  schedule:
+- name: bed
+  version:
+  tags: []
+  description:
+  entrypoint: src/omnipy_examples/deployment.py:bed_prefect
+  parameters: {}
+  work_pool:
+    name: omnipy
+    work_queue_name:
+    job_variables: {}
+  schedule:
