--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,19 +10,24 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.12"
+python = ">=3.10,<3.13"
 typing-inspect = "^0.8.0"
-omnipy = "0.15.6"
 typer = "^0.9.0"
 omnipy-example-data = "^0.1.0"
 reader = "^3.4"
 github3-py = "^3.2.0"
-pandas = "1.5.3"
+#pandas = "1.5.3"
 pytest = "<8"
+omnipy = "0.16.0"
+#omnipy = { git = "https://github.com/fairtracks/omnipy.git", branch = "release_0.16.0" }
+boto3 = "^1.35.6"
+prefect-aws = "<0.5"
+griffe = "<1"
+numpy = "<2"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.7.1"
-pre-commit = "^3.6.0"
+pre-commit = "^3.8.0"
+mypy = "^1.11.2"
 
 [tool.poetry.scripts]
 omnipy-examples = "omnipy_examples.main:app"
