Include omnipy in Docker image

--- a/prefect.yaml
+++ b/prefect.yaml
@@ -14,18 +14,15 @@ push:
 
 # pull section allows you to provide instructions for cloning this project in remote locations
 pull:
-- prefect.deployments.steps.git_clone:
-    id: clone-omnipy
-    repository: https://github.com/fairtracks/omnipy.git
 
 - prefect.deployments.steps.git_clone:
     id: clone-omnipy-examples
     repository: https://github.com/fairtracks/omnipy_examples.git
 
-- prefect.deployments.steps.pip_install_requirements:
-    directory: "{{ clone-omnipy-examples.directory }}"
-    requirements_file: requirements.txt
-    stream_output: true
+#- prefect.deployments.steps.pip_install_requirements:
+#    directory: "{{ clone-omnipy-examples.directory }}"
+#    requirements_file: requirements.txt
+#    stream_output: true
 
 # the deployments section allows you to provide configuration for deploying flows
 deployments:
