New try to get Prefect pull steps correct

--- a/prefect.yaml
+++ b/prefect.yaml
@@ -18,11 +18,12 @@ pull:
 - prefect.deployments.steps.git_clone:
     id: clone-omnipy-examples
     repository: https://github.com/fairtracks/omnipy_examples.git
-
-#- prefect.deployments.steps.pip_install_requirements:
-#    directory: "{{ clone-omnipy-examples.directory }}"
-#    requirements_file: requirements.txt
-#    stream_output: true
+- prefect.deployments.steps.pip_install_requirements:
+    directory: { { clone-clone-omnipy-examples.directory } }
+    requirements_file: requirements.txt
+    stream_output: False
+- prefect.deployments.steps.set_working_directory:
+    directory: { { clone-omnipy-examples.directory } }
 
 # the deployments section allows you to provide configuration for deploying flows
 deployments:
