--- a/prefect.yaml
+++ b/prefect.yaml
@@ -21,7 +21,7 @@ pull:
 - prefect.deployments.steps.pip_install_requirements:
     directory: "{{ clone-omnipy-examples.directory }}"
     requirements_file: requirements.txt
-    stream_output: False
+    stream_output: True
 - prefect.deployments.steps.set_working_directory:
     directory: "{{ clone-omnipy-examples.directory }}"
 
