--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiosqlite==0.20.0 ; python_version >= "3.10" and python_version < "3.13"
 aiostream==0.4.5 ; python_version >= "3.10" and python_version < "3.13"
 alembic==1.13.2 ; python_version >= "3.10" and python_version < "3.13"
-anyio==4.4.0 ; python_version >= "3.10" and python_version < "3.13"
+anyio==4.5.0 ; python_version >= "3.10" and python_version < "3.13"
 apprise==1.9.0 ; python_version >= "3.10" and python_version < "3.13"
 asgi-lifespan==2.1.0 ; python_version >= "3.10" and python_version < "3.13"
 asttokens==2.4.1 ; python_version >= "3.10" and python_version < "3.13"
@@ -9,8 +9,8 @@ async-timeout==4.0.3 ; python_version >= "3.10" and python_version < "3.12.0"
 asyncpg==0.29.0 ; python_version >= "3.10" and python_version < "3.13"
 attrs==24.2.0 ; python_version >= "3.10" and python_version < "3.13"
 beautifulsoup4==4.12.3 ; python_version >= "3.10" and python_version < "3.13"
-boto3==1.35.20 ; python_version >= "3.10" and python_version < "3.13"
-botocore==1.35.20 ; python_version >= "3.10" and python_version < "3.13"
+boto3==1.35.23 ; python_version >= "3.10" and python_version < "3.13"
+botocore==1.35.23 ; python_version >= "3.10" and python_version < "3.13"
 cachetools==5.5.0 ; python_version >= "3.10" and python_version < "3.13"
 certifi==2024.8.30 ; python_version >= "3.10" and python_version < "3.13"
 cffi==1.17.1 ; python_version >= "3.10" and python_version < "3.13" and platform_python_implementation != "PyPy"
@@ -32,10 +32,9 @@ exceptiongroup==1.2.2 ; python_version >= "3.10" and python_version < "3.13"
 executing==2.1.0 ; python_version >= "3.10" and python_version < "3.13"
 feedparser==6.0.11 ; python_version >= "3.10" and python_version < "3.13"
 fsspec==2024.9.0 ; python_version >= "3.10" and python_version < "3.13"
-github3-py==3.2.0 ; python_version >= "3.10" and python_version < "3.13"
-google-auth==2.34.0 ; python_version >= "3.10" and python_version < "3.13"
+google-auth==2.35.0 ; python_version >= "3.10" and python_version < "3.13"
 graphviz==0.20.3 ; python_version >= "3.10" and python_version < "3.13"
-greenlet==3.1.0 ; python_version >= "3.10" and python_version < "3.13"
+greenlet==3.1.1 ; python_version >= "3.10" and python_version < "3.13"
 griffe==0.49.0 ; python_version >= "3.10" and python_version < "3.13"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "3.13"
 h2==4.1.0 ; python_version >= "3.10" and python_version < "3.13"
@@ -66,14 +65,12 @@ markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "3.13"
 markdown==3.7 ; python_version >= "3.10" and python_version < "3.13"
 markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "3.13"
 mdurl==0.1.2 ; python_version >= "3.10" and python_version < "3.13"
-mypy-boto3-s3==1.35.16 ; python_version >= "3.10" and python_version < "3.13"
-mypy-boto3-secretsmanager==1.35.0 ; python_version >= "3.10" and python_version < "3.13"
 mypy-extensions==1.0.0 ; python_version >= "3.10" and python_version < "3.13"
-numpy==1.26.4 ; python_version >= "3.10" and python_version < "3.13"
+numpy==1.26.4 ; python_version >= "3.10" and python_version <= "3.11" or python_version >= "3.12" and python_version < "3.13"
 oauthlib==3.2.2 ; python_version >= "3.10" and python_version < "3.13"
 objsize==0.7.0 ; python_version >= "3.10" and python_version < "3.13"
 omnipy-example-data==0.1.0 ; python_version >= "3.10" and python_version < "3.13"
-omnipy @ git+https://github.com/fairtracks/omnipy.git@main ; python_version >= "3.10" and python_version < "3.13"
+omnipy==0.16.1 ; python_version >= "3.10" and python_version < "3.13"
 orjson==3.10.7 ; python_version >= "3.10" and python_version < "3.13"
 packaging==24.1 ; python_version >= "3.10" and python_version < "3.13"
 pandas==2.1.4 ; python_version >= "3.10" and python_version < "3.13"
@@ -81,19 +78,16 @@ pathspec==0.12.1 ; python_version >= "3.10" and python_version < "3.13"
 pendulum==2.1.2 ; python_version >= "3.10" and python_version < "3.12"
 pendulum==3.0.0 ; python_version >= "3.12" and python_version < "3.13"
 pluggy==1.5.0 ; python_version >= "3.10" and python_version < "3.13"
-prefect-aws==0.4.19 ; python_version >= "3.10" and python_version < "3.13"
-prefect==2.20.7 ; python_version >= "3.10" and python_version < "3.13"
+prefect==2.20.8 ; python_version >= "3.10" and python_version < "3.13"
 pyasn1-modules==0.4.1 ; python_version >= "3.10" and python_version < "3.13"
 pyasn1==0.6.1 ; python_version >= "3.10" and python_version < "3.13"
 pycparser==2.22 ; python_version >= "3.10" and python_version < "3.13" and platform_python_implementation != "PyPy"
-pydantic-core==2.23.4 ; python_version >= "3.10" and python_version < "3.13"
+pydantic-core==2.24.0 ; python_version >= "3.10" and python_version < "3.13"
 pydantic[email]==1.10.18 ; python_version >= "3.10" and python_version < "3.13"
 pygments==2.18.0 ; python_version >= "3.10" and python_version < "3.13"
-pyjwt[crypto]==2.9.0 ; python_version >= "3.10" and python_version < "3.13"
-pyparsing==3.1.4 ; python_version >= "3.10" and python_version < "3.13"
 pytest-asyncio==0.20.3 ; python_version >= "3.10" and python_version < "3.13"
 pytest-cases==3.8.5 ; python_version >= "3.10" and python_version < "3.13"
-pytest==7.4.4 ; python_version >= "3.10" and python_version < "3.13"
+pytest==8.3.3 ; python_version >= "3.10" and python_version < "3.13"
 python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "3.13"
 python-multipart==0.0.9 ; python_version >= "3.10" and python_version < "3.13"
 python-slugify==8.0.4 ; python_version >= "3.10" and python_version < "3.13"
@@ -121,7 +115,6 @@ sniffio==1.3.1 ; python_version >= "3.10" and python_version < "3.13"
 soupsieve==2.6 ; python_version >= "3.10" and python_version < "3.13"
 sqlalchemy==2.0.35 ; python_version >= "3.10" and python_version < "3.13"
 sqlalchemy[asyncio]==2.0.35 ; python_version >= "3.10" and python_version < "3.13"
-tenacity==9.0.0 ; python_version >= "3.10" and python_version < "3.13"
 text-unidecode==1.3 ; python_version >= "3.10" and python_version < "3.13"
 toml==0.10.2 ; python_version >= "3.10" and python_version < "3.13"
 tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11"
@@ -131,7 +124,6 @@ typing-inspect==0.8.0 ; python_version >= "3.10" and python_version < "3.13"
 tzdata==2024.1 ; python_version >= "3.10" and python_version < "3.13"
 tzlocal==5.2 ; python_version >= "3.10" and python_version < "3.13"
 ujson==5.10.0 ; python_version >= "3.10" and python_version < "3.13"
-uritemplate==4.1.1 ; python_version >= "3.10" and python_version < "3.13"
 urllib3==2.2.3 ; python_version >= "3.10" and python_version < "3.13"
 uvicorn==0.30.6 ; python_version >= "3.10" and python_version < "3.13"
 websocket-client==1.8.0 ; python_version >= "3.10" and python_version < "3.13"
