Test deployment from branch

--- a/prefect.yaml
+++ b/prefect.yaml
@@ -18,12 +18,13 @@ pull:
 - prefect.deployments.steps.git_clone:
     id: clone-omnipy-examples
     repository: https://github.com/fairtracks/omnipy_examples.git
+    branch: test_deploy
 - prefect.deployments.steps.pip_install_requirements:
     directory: "{{ clone-omnipy-examples.directory }}"
     requirements_file: requirements.txt
     stream_output: True
-- prefect.deployments.steps.set_working_directory:
-    directory: "{{ clone-omnipy-examples.directory }}"
+#- prefect.deployments.steps.set_working_directory:
+#    directory: "{{ clone-omnipy-examples.directory }}"
 
 # the deployments section allows you to provide configuration for deploying flows
 deployments:
