--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ numpy==1.26.4 ; python_version >= "3.10" and python_version <= "3.11" or python_
 oauthlib==3.2.2 ; python_version >= "3.10" and python_version < "3.13"
 objsize==0.7.0 ; python_version >= "3.10" and python_version < "3.13"
 omnipy-example-data @ git+https://github.com/fairtracks/omnipy_example_data.git@main ; python_version >= "3.10" and python_version < "3.13"
-omnipy @ git+https://github.com/fairtracks/omnipy.git@main ; python_version >= "3.10" and python_version < "3.13"
+omnipy @ git+https://github.com/fairtracks/omnipy.git@uniprot_speedup ; python_version >= "3.10" and python_version < "3.13"
 orjson==3.10.7 ; python_version >= "3.10" and python_version < "3.13"
 packaging==24.1 ; python_version >= "3.10" and python_version < "3.13"
 pandas==2.1.4 ; python_version >= "3.10" and python_version < "3.13"
