--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ boto3 = "^1.35.23"
 #griffe = "<1"
 #numpy = "<2"
 prefect = ">2.20"
+aiohttp = {extras = ["speedups"], version = "^3.10.6"}
+anyio = {extras = ["trio"], version = "^4.6.0"}
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.8.0"
