--- a/prefect.yaml
+++ b/prefect.yaml
@@ -23,8 +23,12 @@ pull:
     directory: "{{ clone-omnipy-examples.directory }}"
     requirements_file: requirements.txt
     stream_output: True
+- prefect.deployments.steps.run_shell_script:
+    directory: "{{ clone-omnipy-examples.directory }}"
+    script: |
+        pip install .
 - prefect.deployments.steps.set_working_directory:
-    directory: "/opt/prefect/{{ clone-omnipy-examples.directory }}/src"
+    directory: "/opt/prefect/{{ clone-omnipy-examples.directory }}"
 
 # the deployments section allows you to provide configuration for deploying flows
 deployments:
@@ -32,7 +36,7 @@ deployments:
   version:
   tags: []
   description:
-  entrypoint: omnipy_examples/deployment.py:dagsim_prefect
+  entrypoint: src/omnipy_examples/deployment.py:dagsim_prefect
   parameters: {}
   work_pool:
     name: omnipy
@@ -44,7 +48,7 @@ deployments:
   version:
   tags: []
   description:
-  entrypoint: omnipy_examples/deployment.py:encode_prefect
+  entrypoint: src/omnipy_examples/deployment.py:encode_prefect
   parameters: {}
   work_pool:
     name: omnipy
@@ -56,7 +60,7 @@ deployments:
   version:
   tags: []
   description:
-  entrypoint: omnipy_examples/deployment.py:gff_prefect
+  entrypoint: src/omnipy_examples/deployment.py:gff_prefect
   parameters: {}
   work_pool:
     name: omnipy
@@ -68,7 +72,7 @@ deployments:
   version:
   tags: []
   description:
-  entrypoint: omnipy_examples/deployment.py:isajson_prefect
+  entrypoint: src/omnipy_examples/deployment.py:isajson_prefect
   parameters: {}
   work_pool:
     name: omnipy
@@ -80,7 +84,7 @@ deployments:
   version:
   tags: []
   description:
-  entrypoint: omnipy_examples/deployment.py:uniprot_prefect
+  entrypoint: src/omnipy_examples/deployment.py:uniprot_prefect
   parameters: {}
   work_pool:
     name: omnipy
@@ -92,7 +96,7 @@ deployments:
   version:
   tags: []
   description:
-  entrypoint: omnipy_examples/deployment.py:chatgpt_prefect
+  entrypoint: src/omnipy_examples/deployment.py:chatgpt_prefect
   parameters: {}
   work_pool:
     name: omnipy
@@ -104,7 +108,7 @@ deployments:
   version:
   tags: []
   description:
-  entrypoint: omnipy_examples/deployment.py:bed_prefect
+  entrypoint: src/omnipy_examples/deployment.py:bed_prefect
   parameters: {}
   work_pool:
     name: omnipy
